GNOME Bugzilla – Bug 693732
Debug messages are not printed even if G_MESSAGES_DEBUG=all is set
Last modified: 2013-02-13 18:19:02 UTC
If the --verbose flag has not been specified cc_shell_log_set_debug() forces G_MESSAGES_DEBUG=all but then decides that G_LOG_LEVEL_DEBUG messages should be ignored, even if an appropriate G_MESSAGES_DEBUG variable was already available in the environment. This means that running `G_MESSAGES_DEBUG=all gnome-control-center' will not print any debug message from gnome-control-center, which is quite unexpected.
Created attachment 235934 [details] [review] shell: Do not forcibly suppress debug messages if --verbose not set Only force G_MESSAGES_DEBUG=all on --verbose, and follow the usual logging behaviour otherwise. This fixes specifying log domains in G_MESSAGES_DEBUG and also G_MESSAGES_DEBUG=all without setting --verbose.
Review of attachment 235934 [details] [review]: Looks fine.
The following fix has been pushed: 30144e5 shell: Do not forcibly suppress debug messages if --verbose not set
Created attachment 235939 [details] [review] shell: Do not forcibly suppress debug messages if --verbose not set Only force G_MESSAGES_DEBUG=all on --verbose, and follow the usual logging behaviour otherwise. This fixes specifying log domains in G_MESSAGES_DEBUG and also G_MESSAGES_DEBUG=all without setting --verbose.