shell: Do not forcibly suppress debug messages if --verbose not set

Only force G_MESSAGES_DEBUG=all on --verbose, and follow the usual
logging behaviour otherwise.

This fixes specifying log domains in G_MESSAGES_DEBUG and also
G_MESSAGES_DEBUG=all without setting --verbose.

https://bugzilla.gnome.org/show_bug.cgi?id=693732